[package]
name = "locations"
version = "0.0.1"
authors = ["Nathan Shelly <nsnshelly@gmail.com>", "Sasha Weiss <asashaweiss@gmail.com>"]
edition = "2018"

[dependencies]
jsonwebtoken = "7"
reqwest = { version = "0.10", features = ["json"] }
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2", features = ["full"] }
